[package]
name = "code-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.20"
serde = "^1.0"
serde_derive = "^1.0"
confy = "^0.5"

[dependencies.clap]
version = "4"
features = ["derive", "unstable-grouped"]

[dev-dependencies]
assert_fs = "1.0.13"
